More progress on inline layout and borders. Everything is still broken.