@@ -6,6 +6,7 @@ import java.awt.font.TextLayout;
 import java.text.AttributedCharacterIterator;
 import java.text.AttributedString;
 import java.util.ArrayList;
+import java.util.Deque;
 import java.util.LinkedList;
 import java.util.List;
 import java.util.stream.Stream;
@@ -22,14 +23,15 @@ import com.brianc.style.StyledNode;
 
 public class InlineBox extends LayoutBox implements StyledLayoutBox {
 	private StyledNode styledNode;
-	private List<LineBox> lines;
+	private Deque<LineBox> lines;
 	private List<Fragment> fragments;
+
 	// TODO add list
-	
+
 	public InlineBox(StyledNode styledNode) {
 		super();
 		this.styledNode = styledNode;
-		lines = new ArrayList<>();
+		lines = new LinkedList<>();
 		fragments = new ArrayList<>();
 	}
 
@@ -37,29 +39,54 @@ public class InlineBox extends LayoutBox implements StyledLayoutBox {
 	public BoxType getType() {
 		return BoxType.INLINE_NODE;
 	}
-	
+
 	@Override
 	public StyledNode getStyledNode() {
 		return styledNode;
 	}
-	
-	public List<LineBox> getLines() {
+
+	public Deque<LineBox> getLines() {
 		return lines;
 	}
-	
+
 	private void layout(Dimensions containingBlock, Renderer renderBackend, LineBox lastLine) {
 		layoutInlineMaxWidth(containingBlock);
 		reCalcLines(containingBlock, lastLine, renderBackend);
 
 		for (LayoutBox child : children) {
 			// TODO block children?
-			InlineBox childAsInline = (InlineBox)child;
+			InlineBox childAsInline = (InlineBox) child;
 			childAsInline.layout(dimensions, renderBackend, lastLine);
-			
+
 			lines.addAll(childAsInline.lines);
 		}
+
+		calculateInlinePosition(containingBlock);
 	}
-	
+
+	private void calculateInlinePosition(Dimensions containingBlock) {
+		Value zero = new LengthValue(0, Unit.PX);
+		float maxLineWidth = (float) lines.stream().mapToDouble(l -> (double) l.filledWidth).max()
+				.orElse(0);
+		float totalHeight = (float) lines.stream().mapToDouble(l -> (double) l.maxHeight).sum();
+
+		dimensions.margin.top = styledNode.lookup("margin-top", "margin", zero).toPx();
+		dimensions.margin.bottom = styledNode.lookup("margin-bottom", "margin", zero).toPx();
+
+		dimensions.border.top = styledNode.lookup("border-top-width", "border-width", zero).toPx();
+		dimensions.border.bottom = styledNode.lookup("border-bottom-width", "border-width", zero).toPx();
+
+		dimensions.padding.top = styledNode.lookup("padding-left", "padding", zero).toPx();
+		dimensions.padding.bottom = styledNode.lookup("padding-right", "padding", zero).toPx();
+
+		dimensions.content.width = maxLineWidth;
+		dimensions.content.height = totalHeight;
+
+		dimensions.content.x = containingBlock.content.x + dimensions.margin.left
+				+ dimensions.padding.left + dimensions.border.left;
+		dimensions.content.y = containingBlock.content.y;
+	}
+
 	@Override
 	void layout(Dimensions containingBlock, Renderer renderBackend) {
 		// TODO inline layout as per
@@ -68,34 +95,35 @@ public class InlineBox extends LayoutBox implements StyledLayoutBox {
 		if (lines.isEmpty()) {
 			lines.add(new LineBox());
 		}
-		
+
 		layout(containingBlock, renderBackend, getLastLine());
 	}
-	
+
 	private LineBox getLastLine() {
-		return lines.get(lines.size() - 1);
+		return lines.getLast();
 	}
-	
+
 	private void reCalcLines(Dimensions dimensions, LineBox lastLine, Renderer renderBackend) {
 		Node domNode = styledNode.getNode();
-		
+
 		if (domNode.getType() == NodeType.TEXT) {
-			String nodeText = ((TextNode)domNode).getText();
+			String nodeText = ((TextNode) domNode).getText();
 			AttributedCharacterIterator iter = new AttributedString(nodeText).getIterator();
-			FontRenderContext renderContext = renderBackend.getGraphicsContext().getFontRenderContext();
+			FontRenderContext renderContext = renderBackend.getGraphicsContext()
+					.getFontRenderContext();
 
 			LineBreakMeasurer measurer = new LineBreakMeasurer(iter, renderContext);
 			float contentMaxWidth = dimensions.content.width;
 			LineBox currentLine = lastLine;
-			
+
 			int pos;
 			while ((pos = measurer.getPosition()) < nodeText.length()) {
 				float lineRemainingWidth = contentMaxWidth;
-				
+
 				if (currentLine.filledWidth < contentMaxWidth) {
 					lineRemainingWidth = contentMaxWidth - currentLine.filledWidth;
 				} else {
-					currentLine = new LineBox();
+					currentLine = new LineBox(currentLine.rootBox);
 					lines.add(currentLine);
 				}
 
@@ -108,11 +136,7 @@ public class InlineBox extends LayoutBox implements StyledLayoutBox {
 			}
 		}
 	}
-	
-	private void layoutText(Dimensions containingBlock, TextNode domNode, Renderer renderBackend) {
 
-	}
-	
 	private void layoutInlineMaxWidth(Dimensions containingBlock) {
 		Value auto = new KeywordValue("auto");
 		Value width = auto;
@@ -127,9 +151,9 @@ public class InlineBox extends LayoutBox implements StyledLayoutBox {
 		Value paddingLeft = styledNode.lookup("padding-left", "padding", zero);
 		Value paddingRight = styledNode.lookup("padding-right", "padding", zero);
 
-		float total = (float) Stream.of(marginLeft, marginRight, borderLeft, borderRight,
-				paddingLeft, paddingRight, width).mapToDouble(v -> v.toPx()).sum();
-	
+		float total = (float) Stream
+				.of(marginLeft, marginRight, borderLeft, borderRight, paddingLeft, paddingRight,
+						width).mapToDouble(v -> v.toPx()).sum();
 
 		float containingWidth = containingBlock.content.width;
 		if (total > containingWidth) {
@@ -148,7 +172,7 @@ public class InlineBox extends LayoutBox implements StyledLayoutBox {
 		if (leftIsAuto) {
 			marginLeft = zero;
 		}
-		
+
 		if (rightIsAuto) {
 			marginRight = zero;
 		}
@@ -161,7 +185,7 @@ public class InlineBox extends LayoutBox implements StyledLayoutBox {
 
 		dimensions.margin.left = marginLeft.toPx();
 		dimensions.margin.right = marginRight.toPx();
-		
+
 		if (containingWidth > total) {
 			dimensions.content.width = containingWidth - total;
 		} else {
@@ -169,24 +193,44 @@ public class InlineBox extends LayoutBox implements StyledLayoutBox {
 		}
 	}
 
-
 	public class LineBox {
 		private List<Fragment> fragments;
 		private float filledWidth;
+		private float maxHeight;
+		private float lineHeight;
 		
-		public LineBox() {
+		public LineBox(InlineBox rootBox) {
 			fragments = new ArrayList<>();
 		}
 
 		public void addFragment(Fragment fragment) {
 			fragments.add(fragment);
 			filledWidth += fragment.lineLayout.getAdvance();
+			TextLayout layout = fragment.getLayout();
+
+			float fragmentHeight = layout.getAscent() - layout.getDescent();
+			maxHeight = Math.max(maxHeight, fragmentHeight);
+
+			if (fragment.box == rootBox) {
+				lineHeight = fragmentHeight;
+			}
+		}
+
+		public float getFilledWidth() {
+			return filledWidth;
 		}
 
 		public List<Fragment> getFragments() {
 			return fragments;
 		}
 
+		public float getBoxHeight() {
+			return maxHeight;
+		}
+		
+		public float getLineHeight() {
+			return lineHeight;
+		}
 	}
-	
+
 }
